--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.FundacionCuatro"
         tools:targetApi="31">
         <activity
+            android:name=".RegEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegAdultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegChildrenActivity"
+            android:exported="false" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
